# gmi-deployer

./: .env  .gitignore  Cargo.toml
meme_coin/: Move.toml
meme_coin/tests/: meme_coin_tests.move
src/: env.rs  lib.rs  main.rs  meme_coin.rs  server.rs  sui.rs
