[package]
name = "deployer"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.6.0"
anyhow = "1.0.86"
log = "0.4.21"
serde = "1.0.202"


sui-sdk = { git = "https://github.com/mystenlabs/sui", package = "sui-sdk" }
sui-keys = { git = "https://github.com/mystenlabs/sui", package = "sui-keys" }
sui-config = { git = "https://github.com/mystenlabs/sui", package = "sui-config" }
sui-shared-crypto = { git = "https://github.com/mystenlabs/sui", package = "shared-crypto" }
serde_json = "1.0.117"
dotenv = "0.15.0"
tokio = "1.37.0"
tracing = "0.1.40"
actix-cors = "0.7.0"
openssl = "0.10.64"
tracing-subscriber = "0.3.18"
